--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,18 @@ version: "3.0"
 
 services:
 
-  wordpress:
-    image: wordpress:5.7.2-php7.4-apache
-    restart: unless-stopped
+  nginx-fpm:
+    build: .
     ports:
-      - 80:80
+      - "80:80"
     volumes:
-        - wordpress:/var/www/html
+      - wordpress:/var/www/html
+
+  wordpress:
+    image: wordpress:5.7.2-php7.4-fpm
+    restart: unless-stopped
+    volumes:
+      - wordpress:/var/www/html
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: ${USER_DB:-wordpress}
@@ -25,12 +30,6 @@ services:
       MARIADB_DATABASE: wpdb
       MARIADB_USER: ${USER_DB:-wordpress}
       MARIADB_PASSWORD: ${USER_DB_PASSWORD?Missing MariaDB user password}
-
-  adminer:
-    image: adminer:4.8.1-standalone
-    restart: unless-stopped
-    ports:
-      - 8080:8080
 
 volumes:
   wordpress:
